<resources>
    <string name="app_name">Homework 21</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_user_sign_up_here">New user? Sign up here</string>
    <string name="sign_in">Sign In</string>
    <string name="session">session</string>
    <string name="full_name">Full Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="already_a_member_log_in">Already a member? Log in</string>
    <string name="sign_up">Sign Up\u0020</string>
    <string name="new_user">New User?\u0020</string>
    <string name="already_a_member">Already a member?\u0020</string>
    <string name="here">here</string>
    <string name="log_in">Log In</string>
    <string name="error">ERROR</string>
    <string name="close">close</string>
    <string name="my_feed">My Feed</string>
    <string name="learn_more">Learn More</string>
    <string name="wall">Wall</string>
    <string name="favorite">Favorite</string>
    <string name="wallet">Wallet</string>
    <string name="order">Order</string>
    <string name="my_profile">My Profile</string>
    <string name="my_post">My Posts</string>
    <string name="about">About</string>
    <string name="my_cart">My Cart</string>
    <string name="log_out">Log Out</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="add_your_card">Add your Card</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="add_location">Add Location</string>
    <string name="add_your_address">Add your Address</string>
    <string name="floor_appartment">Floor/Appartment</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>