<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="36dp"
    android:paddingEnd="36dp"
    android:scrollbars="none"
    tools:context=".ui.auth.sign_up.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:src="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:hint="@string/email_address"
            android:orientation="horizontal"
            app:endIconMode="custom"
            app:endIconTint="@color/text_hint"
            app:endIconDrawable="@drawable/baseline_check_circle_24"
            app:hintTextColor="@color/text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:lines="1"
                android:paddingStart="0dp"
                android:textColor="@color/text_color"
                android:inputType="textEmailAddress"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/full_name"
            android:orientation="horizontal"
            app:endIconMode="custom"
            app:endIconTint="@color/text_hint"
            app:endIconDrawable="@drawable/baseline_check_circle_24"
            app:hintTextColor="@color/text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:lines="1"
                android:paddingStart="0dp"
                android:textColor="@color/text_color"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/password"
            app:endIconMode="custom"
            app:endIconTint="@color/text_hint"
            app:endIconDrawable="@drawable/baseline_check_circle_24"
            app:hintTextColor="@color/text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:lines="1"
                android:paddingStart="0dp"
                android:inputType="textPassword"
                android:textColor="@color/text_color"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:hint="@string/repeat_password"
            app:endIconMode="custom"
            app:endIconTint="@color/text_hint"
            app:endIconDrawable="@drawable/baseline_check_circle_24"
            app:hintTextColor="@color/text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:lines="1"
                android:paddingStart="0dp"
                android:inputType="textPassword"
                android:textColor="@color/text_color"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:visibility="invisible"/>

        <include
            android:id="@+id/btnSignUp"
            layout="@layout/gradient_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp" />

        <TextView
            android:id="@+id/tvLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:textSize="14sp"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>
</ScrollView>